<resources>
    <string name="app_name">fruvegoo</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_pencarian_terak">Pencarian Terakhir</string>
  <string name="lbl_bahan_steak">Bahan Steak:</string>
  <string name="lbl_fruvego">Fruvego</string>
  <string name="lbl_beranda">Beranda</string>
  <string name="lbl_2_buah">2 buah </string>
  <string name="msg_syarat_ketent">Syarat &amp; Ketentuan Metode Refund</string>
  <string name="msg_bumbu_dasar_put">Bumbu Dasar Putih
</string>
  <string name="lbl_anggur_merah">Anggur merah</string>
  <string name="lbl_lemon_lokal">Lemon Lokal</string>
  <string name="lbl_rp_152_000">Rp. 152.000</string>
  <string name="msg_resep_pasta_alf">Resep Pasta Alfredo</string>
  <string name="lbl_pisang">Pisang</string>
  <string name="lbl_oleh_fruvego">Oleh : Fruvego</string>
  <string name="lbl_produk_paketan">Produk Paketan</string>
  <string name="lbl_kemiri_muka">Kemiri Muka</string>
  <string name="lbl_rp_9_400">Rp. 9.400</string>
  <string name="lbl_bayam">Bayam</string>
  <string name="lbl_sayur_lodeh">Sayur Lodeh</string>
  <string name="msg_membantu_kamu_u">Membantu kamu untuk mendapatkan produk
sayur, buah dan bahan makanan terbaik</string>
  <string name="msg_tulis_kota_keca">Tulis kota/kecamatan/jalan</string>
  <string name="lbl_minyak_kelapa">Minyak Kelapa</string>
  <string name="msg_keranjang_belan">Keranjang Belanja</string>
  <string name="lbl_minyak_kelapa2">Minyak Kelapa
</string>
  <string name="lbl_segar_cepat">Segar &amp; cepat!</string>
  <string name="msg_siap_saji_ola">Siap Saji &amp; Olahan</string>
  <string name="lbl_1_porsi">1 Porsi</string>
  <string name="lbl_3_pcs">3 pcs</string>
  <string name="lbl_800_terjual">800+ terjual</string>
  <string name="msg_manfaat_kesehat">Manfaat Kesehatan</string>
  <string name="lbl_tomat_hijau">Tomat hijau</string>
  <string name="lbl_login_sekarang">Login sekarang</string>
  <string name="lbl_nanas">Nanas</string>
  <string name="lbl_sayur_sop">Sayur Sop</string>
  <string name="lbl_rp_12_500">Rp. 12.500</string>
  <string name="lbl_ribeye_steak">Ribeye Steak
</string>
  <string name="lbl_detail_resep">Detail Resep</string>
  <string name="lbl_rp_9_500">Rp. 9.500</string>
  <string name="msg_susu_olahan_s">Susu &amp; Olahan Susu</string>
  <string name="lbl_salad_buah">Salad buah</string>
  <string name="msg_sudah_punya_aku">Sudah punya akun? Login sekarang </string>
  <string name="lbl_rp_13_000">Rp. 13.000</string>
  <string name="lbl_jeruk_purut">Jeruk Purut</string>
  <string name="msg_2_sendok_makan">2 sendok makan Lada Hitam
1 sendok makan Bumbu Dasar Putih
2 buah Cengkeh
1/4 Batok Kelapa
3 sdm Minyak Kelapa</string>
  <string name="msg_telur_tahu_t">Telur, Tahu &amp; Tempe</string>
  <string name="lbl_rp_30_000">Rp. 30.000</string>
  <string name="msg_apa_syarat_dan">Apa syarat dan ketentuan mengikuti/menggunakan promo Fruvego?</string>
  <string name="lbl_buah">Buah</string>
  <string name="msg_resep_balinese">Resep Balinese Marinate Rib Eye Steak with Sambal Matah</string>
  <string name="msg_total_rp_100">Total : Rp. 100.000</string>
  <string name="msg_rekomendasi_pil">Rekomendasi Pilihan</string>
  <string name="lbl_1k_terjual">1k+ terjual</string>
  <string name="lbl_manisan">Manisan</string>
  <string name="lbl_bantuan">Bantuan</string>
  <string name="msg_metode_pembayar">Metode Pembayaran</string>
  <string name="lbl_rp_11_000">Rp. 11.000</string>
  <string name="msg_lihat_selengkap">Lihat selengkapnya</string>
  <string name="lbl_produk_lokal">Produk Lokal</string>
  <string name="msg_asal_cirebon_7">Asal Cirebon, 750 - 900 gr/3 pcs</string>
  <string name="msg_telur_ayam_nege">Telur Ayam Negeri</string>
  <string name="lbl_230_terjual">230+ terjual</string>
  <string name="lbl_makanan_ringan">Makanan Ringan</string>
  <string name="msg_jeruk_bali_mura">Jeruk Bali Murah</string>
  <string name="lbl_kategori">Kategori</string>
  <string name="msg_pastikan_produk">Pastikan produk yang kamu pilih sudah sesuai ya!</string>
  <string name="lbl_pepaya">Pepaya</string>
  <string name="lbl_pilih_semua">Pilih Semua</string>
  <string name="msg_isi_paket_tom">Isi Paket : tomat, kentang wortel, kol putih, bawang putih, seledri, bawang daun, kaldu bubuk, daging sapi, pala, cengkeh.</string>
  <string name="lbl_anggur">Anggur</string>
  <string name="msg_tips_penyimpana">Tips Penyimpanan</string>
  <string name="lbl_ibu_bayi">Ibu &amp; Bayi</string>
  <string name="msg_bahan_selem_mar">Bahan Selem Marinate:</string>
  <string name="lbl_100_terjual">100+ terjual</string>
  <string name="msg_resep_cara_me">Resep &amp; Cara Membuat</string>
  <string name="lbl_jeruk_orange">Jeruk Orange</string>
  <string name="lbl_log_in2">Log in</string>
  <string name="lbl_lihat_semua">Lihat Semua</string>
  <string name="lbl_resep_ayam_woku">Resep Ayam Woku</string>
  <string name="msg_bumbu_dasar_put2">Bumbu Dasar Putih</string>
  <string name="msg_1_4_batok_kelap">1/4 Batok Kelapa
3 sdm </string>
  <string name="msg_bagaimana_jika2">Bagaimana jika barang yang diberikan Segari tidak sesuai pesanan saya?</string>
  <string name="lbl_pilihan_untukmu">Pilihan Untukmu</string>
  <string name="lbl_rp_17_000_pack">Rp. 17.000/Pack</string>
  <string name="lbl_rp_14_000_pack">Rp. 14.000/Pack</string>
  <string name="lbl_bumbu_dapur">Bumbu Dapur</string>
  <string name="lbl_toko">Toko</string>
  <string name="lbl_rp_23_000_pack">Rp. 23,000/Pack</string>
  <string name="lbl_jumlah_1">Jumlah 1</string>
  <string name="msg_pesanan_dikonfi">Pesanan Dikonfirmasi</string>
  <string name="lbl_cengkeh">Cengkeh
</string>
  <string name="msg_atau_masuk_deng">Atau masuk dengan</string>
  <string name="lbl_cari_resep">Cari Resep</string>
  <string name="lbl_rp_6_000">Rp. 6.000</string>
  <string name="msg_pelengkap_makan">Pelengkap Makanan</string>
  <string name="lbl_oleh">Oleh : </string>
  <string name="msg_jeruk_merupakan">Jeruk merupakan sebuah buah yang memiliki khasiat. Jeruk yang merupakan buah sitrus. memiliki banyak kandungan vitamin C dan anti oksidan lorem ipsum dolor siamet ....</string>
  <string name="lbl_lada_hitam">Lada Hitam
</string>
  <string name="msg_pilih_alamat_pe">Pilih Alamat Pengiriman</string>
  <string name="lbl_semangka">Semangka</string>
  <string name="msg_sudah_punya_aku4">Sudah punya akun? </string>
  <string name="lbl_deskripsi">Deskripsi</string>
  <string name="msg_sudah_punya_aku3">Sudah punya akun? Daftar sekarang </string>
  <string name="msg_sudah_punya_aku2">Sudah punya akun?</string>
  <string name="msg_kopi_teh_min">Kopi, Teh &amp; Minuman</string>
  <string name="lbl_kol">Kol</string>
  <string name="lbl_isi_10_pcs">Isi 10 pcs</string>
  <string name="lbl_300_terjual">300+ terjual</string>
  <string name="lbl_mie_aceh">Mie Aceh</string>
  <string name="lbl_kebutuhan_pokok">Kebutuhan Pokok</string>
  <string name="msg_pilih_waktu_pen">Pilih Waktu Pengiriman</string>
  <string name="lbl_0822_6180_6805">0822-6180-6805</string>
  <string name="lbl_gunakan_lokasi">Gunakan Lokasi</string>
  <string name="lbl2">-</string>
  <string name="lbl_home">Home</string>
  <string name="msg_penjualan_terba">Penjualan Terbaik</string>
  <string name="lbl_garam">Garam</string>
  <string name="lbl_wortel">Wortel</string>
  <string name="msg_200_250_gram_ri">200-250 gram Ribeye Steak
1 sendok makan Minyak Kelapa
Garam secukupnya</string>
  <string name="lbl_cari_di_fruvego">Cari di Fruvego</string>
  <string name="msg_informasi_produ">Informasi Produsen</string>
  <string name="msg_belum_menerima2">Belum menerima kode? </string>
  <string name="msg_roti_madu_sa">Roti, Madu &amp; Sarapan</string>
  <string name="lbl_rp_35_000">Rp. 35.000</string>
  <string name="lbl_apel">Apel</string>
  <string name="lbl_total_belanja">Total Belanja</string>
  <string name="lbl_verifikasi_akun">Verifikasi akun</string>
  <string name="lbl_20_gram_pack">20 gram/pack</string>
  <string name="msg_jl_margonda_k">Jl. Margonda, Kemiri Muka, Kecamatan Beji,
Kota Depok, Jawa Barat, Indonesia</string>
  <string name="msg_pencarian_popul">Pencarian Populer</string>
  <string name="msg_berdasarkan_tok">Berdasarkan Toko</string>
  <string name="lbl_1_sendok_makan">1 sendok makan</string>
  <string name="msg_masukkan_pin_4">Masukkan pin 4-digit yang sudah dikirimkan ke nomor telepon ********8605.</string>
  <string name="lbl_rp_7_500">Rp. 7.500</string>
  <string name="lbl_55_gram_bottle">55 gram/bottle</string>
  <string name="msg_estimasi_waktu">Estimasi Waktu : 15:00 - 17:00 WIB</string>
  <string name="lbl_1_1_9_kg_pcs">1 - 1.9 kg/pcs</string>
  <string name="lbl_rincian_pesanan">Rincian Pesanan</string>
  <string name="lbl_resep">Resep</string>
  <string name="lbl_rp_15_000">Rp. 15.000</string>
  <string name="msg_transfer_ke_rek2">Transfer ke rekening bank VA BNI</string>
  <string name="lbl_rp_32_000">Rp. 32.000</string>
  <string name="lbl_2_sendok_makan">2 sendok makan </string>
  <string name="lbl_secukupnya">secukupnya</string>
  <string name="lbl_250_terjual">250+ terjual</string>
  <string name="msg_transfer_ke_rek3">Transfer ke rekening bank VA Mandiri</string>
  <string name="lbl_produk_lainnya">Produk Lainnya</string>
  <string name="lbl_google">Google</string>
  <string name="lbl_bahan_masak">Bahan Masak</string>
  <string name="lbl_500_terjual">500+ terjual</string>
  <string name="lbl_beli_sekarang">Beli Sekarang</string>
  <string name="lbl_toge">Toge</string>
  <string name="lbl_beli_lagi">Beli Lagi</string>
  <string name="lbl_200_terjual">200+ terjual</string>
  <string name="msg_bagaimana_cara2">Bagaimana cara mengecek riwayat pesanan saya?</string>
  <string name="lbl_lokasi_terdekat">Lokasi Terdekat</string>
  <string name="lbl_5_pcs">5 pcs</string>
  <string name="lbl_1_sendok_makan2">1 sendok makan </string>
  <string name="msg_total_rp_95">Total : Rp. 95.000</string>
  <string name="lbl_cengkeh2">Cengkeh</string>
  <string name="lbl_ganti_alamat">Ganti Alamat</string>
  <string name="lbl_jus_jeruk">Jus Jeruk</string>
  <string name="msg_anda_akan_mener">Anda akan menerima verifikasi SMS yang mungkin berlaku tarif pesan dan data.</string>
  <string name="lbl_rp_100_000">Rp. 100.000</string>
  <string name="msg_kirimkan_ulang">Kirimkan ulang kode</string>
  <string name="lbl_rp_12_000_pack">Rp. 12.000/Pack</string>
  <string name="msg_belum_menerima">Belum menerima kode? Kirimkan ulang kode</string>
  <string name="lbl_jahe">Jahe</string>
  <string name="msg_transfer_ke_rek">Transfer ke rekening bank VA BCA</string>
  <string name="lbl_pepaya_batam">Pepaya Batam</string>
  <string name="msg_rekomendasi_bah">Rekomendasi Bahan</string>
  <string name="lbl_resep_fuyunghai">Resep Fuyunghai</string>
  <string name="lbl_sayur_asem">Sayur Asem</string>
  <string name="lbl_resep_makanan">Resep Makanan</string>
  <string name="lbl_jeruk_manis">Jeruk Manis</string>
  <string name="msg_alamat_pengirim">Alamat Pengiriman</string>
  <string name="msg_produk_sejenis">Produk Sejenis Lainnya</string>
  <string name="lbl_habis">HABIS</string>
  <string name="lbl_total">Total : </string>
  <string name="msg_bagaimana_melak">Bagaimana melakukan pemesanan COD ke Fruvego?</string>
  <string name="lbl_nasi_goreng">Nasi Goreng</string>
  <string name="msg_besok_4_desem">Besok - 4 Desember</string>
  <string name="lbl_rp_18_000">Rp. 18.000</string>
  <string name="lbl_konvensional">Konvensional</string>
  <string name="lbl_rp_52_000">Rp. 52.000</string>
  <string name="msg_masukkan_nomor">Masukkan nomor handphone</string>
  <string name="lbl">+</string>
  <string name="lbl_1">1</string>
  <string name="lbl_no_handphone">No Handphone</string>
  <string name="lbl_login">Login</string>
  <string name="msg_produk_segar_ya">Produk segar yang langsung diantarkan dengan 
cepat ke rumah anda!</string>
  <string name="lbl_tomat">Tomat</string>
  <string name="lbl_daftar">Daftar</string>
</resources>