<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginDenganNoHpVM" type="com.paniroisapplication.app.modules.logindengannohp.data.viewmodel.LoginDenganNoHpVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearLogindenganNo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_4">
        <ImageView android:id="@+id/imageArrowdown"
            android:layout_height="@dimen/_15pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="@dimen/_22pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowdown"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowdown"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginDenganNoHpVM.loginDenganNoHpModel.txtLogin}"
            style="@style/txtInterbold24" tools:text="@string/lbl_log_in2"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtMasukkannomor"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{loginDenganNoHpVM.loginDenganNoHpModel.txtMasukkannomor}"
            style="@style/txtInterregular14" tools:text="@string/msg_masukkan_nomor"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_no_handphone"
            android:id="@+id/etInputNumber" android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={loginDenganNoHpVM.loginDenganNoHpModel.etInputNumberValue}"
            android:textColorHint="@color/black_900_7f"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:id="@+id/txtAndaakanmener"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:text="@{loginDenganNoHpVM.loginDenganNoHpModel.txtAndaakanmener}"
            style="@style/txtInterregular12_1" tools:text="@string/msg_anda_akan_mener"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLoginOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_96pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_login"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlinethree"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_96pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/gray_601"
                android:id="@+id/lineLineThree"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_weight="0.22" android:layout_width="0dp"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAtaumasukdeng"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_weight="0.56" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{loginDenganNoHpVM.loginDenganNoHpModel.txtAtaumasukdeng}"
                style="@style/txtIntermedium16" tools:text="@string/msg_atau_masuk_deng"/>
            <View android:background="@color/gray_601"
                android:id="@+id/lineLineTwo"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_weight="0.22" android:layout_width="0dp"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowgoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_5">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_height="@dimen/_23pxh"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginStart="@dimen/_63pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_23pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGoogleOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_80pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_weight="0.68" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginDenganNoHpVM.loginDenganNoHpModel.txtGoogleOne}"
                style="@style/txtIntersemibold14_1" tools:text="@string/lbl_google"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_130pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{loginDenganNoHpVM.loginDenganNoHpModel.txtLanguage}"
            style="@style/txtIntersemibold14_2" tools:text="@string/msg_sudah_punya_aku3"/>
    </LinearLayout>
</layout>
