<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="keranjangRowModel" type="com.paniroisapplication.app.modules.keranjang.data.model.KeranjangRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowcheckedcheckboOne"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageCheckedCheckboOne"
            android:layout_height="@dimen/_39pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="@dimen/_30pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_checkedcheckbo"
            tools:ignore="ContentDescription" tools:src="@drawable/img_checkedcheckbo"/>
        <ImageView android:id="@+id/imageImageTwo"
            android:layout_height="@dimen/_59pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_width="@dimen/_75pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_8pxh}"
            imageRes="@{@drawable/img_image2}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image2"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnjerukmanis"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_weight="0.46" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtJerukManis"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{keranjangRowModel.txtJerukManis}"
                style="@style/txtIntersemibold12_1" tools:text="@string/lbl_jeruk_manis"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAsalCirebonSeven"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{keranjangRowModel.txtAsalCirebonSeven}"
                style="@style/txtInterregular8_4" tools:text="@string/msg_asal_cirebon_7"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRpCounter"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{keranjangRowModel.txtRpCounter}"
                style="@style/txtInterbold12" tools:text="@string/lbl_rp_30_000"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowrectangle1492"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_2pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_weight="0.18" android:layout_width="0dp"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_1">
            <FrameLayout android:id="@+id/frameStackrectangle1492"
                android:layout_height="@dimen/_15pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_14pxh" style="@style/groupStylecornerRadius_1">
                <View
                    android:background="@drawable/rectangle_bg_bluegray_100_6d_radius_4"
                    android:id="@+id/viewRectangle1492"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_14pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTwo"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4pxh"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{keranjangRowModel.txtTwo}"
                    style="@style/txtIntersemibold12" tools:text="@string/lbl2"/>
            </FrameLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_weight="0.18" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{keranjangRowModel.txtOne}"
                style="@style/txtIntersemibold12_2" tools:text="@string/lbl_1"/>
            <FrameLayout android:id="@+id/frameStackrectangle1493"
                android:layout_height="@dimen/_15pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_14pxh" style="@style/groupStylecornerRadius_1">
                <View
                    android:background="@drawable/rectangle_bg_green_a700_49_radius_4"
                    android:id="@+id/viewRectangle1493"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_10pxv" android:layout_width="@dimen/_14pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtThree"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{keranjangRowModel.txtThree}"
                    style="@style/txtIntersemibold12" tools:text="@string/lbl"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
